# mjr

./: README.md  pigletVault.json
.obsidian/: app.json  workspace.json
chloethedev/marmajforever/: Cargo.toml
chloethedev/marmajforever-app/: package-lock.json  package.json
chloethedev/marmajforever-app/src/: App.js  near.js  nearConfig.js
chloethedev/marmajforever/src/: lib.rs
daily/: stream of chloe.md
mjr/: README.md
research/EPF/: Project - Uncloak.md  Project-Uncloak.md  Project.md  Reading List.md
research/EPF/Weekly Updates/: Week 0 - Intro.md  Week 0.md  Week 1 - Survey.md  Week 2.md  Week-3.md
research/EPF/Weekly-Updates/: Week-1.md  Week-2.md
research/Notes/CESG/: session_10.md  session_11.md  session_8.md  week-10.md  week-4.md
research/Notes/books/: Cryptography Engineering - 2010.md  Crytpo Eng Exercises.md  Zero2Prod (in Rust) - 2022.md  Zero2Prod - 2022.md
research/Notes/books/articles/: AE-Relations.md  Authenticated-Encryption.md  ChaCha-Poly.md  EF1P-Number-Theory.md  Exaustive-Cryptanalysis.md  Hash-Funcions-HoA.md  Hash-Functions-HoA- Lessons.md  QAP-VB.md  TLS-SSL.md
research/books/: Zero2Prod (in Rust) - 2022.md
